añadidos buscar ficha y listar veterinarias

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -8,7 +8,7 @@
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
+  --ion-color-primary-shade: #3171e0; 
   --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
@@ -28,7 +28,7 @@
   --ion-color-tertiary-tint: #6370ff;
 
   /** success **/
-  --ion-color-success: #2dd36f;
+  --ion-color-success: #7ed957;
   --ion-color-success-rgb: 45, 211, 111;
   --ion-color-success-contrast: #ffffff;
   --ion-color-success-contrast-rgb: 255, 255, 255;
@@ -76,7 +76,13 @@
   --ion-color-light-tint: #f5f6f9;
 }
 
-@media (prefers-color-scheme: dark) {
+// VERDE #7ed957
+// AZUL PERRO #000646
+// AZUL GATO #484277
+// AZUL CONEJO #18246e
+// BLANCO #eaeaca
+
+@media (prefers-color-scheme: light) {
   /*
    * Dark Colors
    * -------------------------------------------
@@ -104,11 +110,11 @@
     --ion-color-tertiary-shade: #5d58e0;
     --ion-color-tertiary-tint: #7974ff;
 
-    --ion-color-success: #2fdf75;
+    --ion-color-success: #7ed957;
     --ion-color-success-rgb: 47,223,117;
     --ion-color-success-contrast: #000000;
     --ion-color-success-contrast-rgb: 0,0,0;
-    --ion-color-success-shade: #29c467;
+    --ion-color-success-shade: #7ed957;
     --ion-color-success-tint: #44e283;
 
     --ion-color-warning: #ffd534;
