cambios y mejoras menores

--- a/src/app/pages/animales/animales.page.html
+++ b/src/app/pages/animales/animales.page.html
@@ -16,6 +16,7 @@
     <ion-item>
         <img class="imagen" src="assets\veterinary(2).png" >
         <ion-label><h1 class="letras1">{{ nombreA }}</h1> 
+                    <h1 class="letras1">{{ nombreespecie }}</h1>
                    <h2 class="letras2">{{n_microchip}}</h2>
                    <h2 class="letras2">{{nombre_color}}</h2>
                    <h2 class="letras2">{{nombre_sexo}}</h2>
