--- a/src/app/pages/veterinarias/veterinarias.page.html
+++ b/src/app/pages/veterinarias/veterinarias.page.html
@@ -4,15 +4,16 @@
     <br>
   </div>
   
-
     <ion-searchbar placeholder="Escribe tu comuna" [(ngModel)]="filterTerm" animated="true" showCancelButton="focus"></ion-searchbar>
     <br>   
       <ion-list>
-        <ion-item *ngFor="let veterinarias of todas | filter : filterTerm">
-          <img class="imagenes" src="assets\veterinary.png">
-          <ion-label> {{veterinarias.nombre_vet}} </ion-label>  
-          <ion-label> {{veterinarias.direccion}} </ion-label>  
-          <ion-label> {{veterinarias.descripcion}} </ion-label>
+        <ion-item *ngFor="let p of veterinarias | filter : filterTerm" [routerLink]="['/veterinarias', p.id_veterinaria ]">
+          <ion-avatar slot="start">
+            <ion-img src="{{p.img}}"></ion-img>
+          </ion-avatar>
+          <ion-label> {{p.nombre_vet}} </ion-label>  
+          <ion-label> {{p.direccion}} </ion-label>    
+          <ion-label> {{p.descripcion}} </ion-label>
         </ion-item>
       </ion-list>
 </ion-content>
