se agregan detalles varios en detall vets

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -8,13 +8,13 @@
     </div>
     <br>
     <div class="container-fluid">
-      <ion-card class="card" href="/veterinarias" routerDirection="root" routerLinkActive="active-item">
+      <ion-card class="card" routerLink="/veterinarias">
         <ion-item color="success">
             <img class="imagen" src="/assets/refugio-de-animales.png">
           <ion-label class="letracards1"> <b>Buscar Veterinarias</b></ion-label>
         </ion-item>
       </ion-card>
-      <ion-card class="card" href="/animales" routerDirection="root" routerLinkActive="active-item">
+      <ion-card class="card" routerLink="/animales">
         <ion-item color="success">
             <img class="imagen" src="/assets/veterinary(1).png" />
           <ion-label class="letracards1"> <b>Buscar Fichas</b></ion-label>
