--- a/src/app/pages/scanner/scanner.page.html
+++ b/src/app/pages/scanner/scanner.page.html
@@ -3,5 +3,11 @@
     <ion-button class="center" (click)="scan()">
         Escanear
     </ion-button>
-    {{code}}
+    <div>
+        <ion-label class="center1">
+            <p>(Actualmente disponible solo para App móvil instalada)</p>
+        </ion-label>
+    </div>
+    <div class="code">{{code}}</div>
+    
 </ion-content>
