--- a/src/app/pages/scanner/scanner.page.scss
+++ b/src/app/pages/scanner/scanner.page.scss
@@ -12,3 +12,16 @@
     margin: auto;
     display: block;
   }
+
+  .center1 {
+    justify-content: center;
+    margin: 4px;
+    text-align: center;
+  }
+
+.code{
+  text-align: center;
+  justify-content: center;
+  margin: 4px;
+  font-size: larger;
+}
