--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,30 +1,26 @@
 .logopetplus{
-    max-width: 13%;
-    min-width: 10%;
+    width: 180px;
     margin: auto;
-    display: flex;
+    display: block;
    }
 
 .bienvenida{
     text-align: center;
     color: #7ed957;
-    font-size: 25px;
-    margin: 0%;
+    font-size: 28px;
 }
 
 .selecciona{
     text-align: center;
     color: #7ed957;
-    font-size: 15px;
+    font-size: 14px;
     margin-bottom: 0%;
 }
 
 .card {
-    height: 20%;
     margin: auto;  
     width: 75%;
-    border: 1px solid #7ed957;    
-    justify-content: center;
+    border: 1px solid #3400c2;    
     margin-bottom: 2%;
 }
 
@@ -33,12 +29,13 @@
 }
 
 .imagen {
-    max-width:15%;
-    margin: 1%;
+    max-width:12%;
+    margin: 3%;
 }
 
 .letracards1{
-    font-size: 100%;
+    font-size: 135%;
     text-align: center;
     text-justify: auto;
+    display: block;
 }
