--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -34,7 +34,7 @@
     </ion-button>
     
     <ion-button fill="clear" class="letrasHeader"
-    routerLink="/veterinarias" 
+    href="/veterinarias" 
     >
       Veterinarias
     </ion-button>
