--- a/src/app/pages/veterinarias/detalle-veterinarias/detalle-veterinarias.page.html
+++ b/src/app/pages/veterinarias/detalle-veterinarias/detalle-veterinarias.page.html
@@ -1,8 +1,8 @@
 <ion-content class="ion-padding">
 
     <ion-buttons>
-        <ion-button color="success" routerLink="/veterinarias">
-            <ion-icon name="arrow-back-outline"></ion-icon>
+        <ion-button href="/veterinarias">
+            <ion-icon class="icon" name="arrow-back-outline" ></ion-icon>
         </ion-button>
     </ion-buttons>
 
