--- a/src/app/pages/veterinarias/veterinarias.page.scss
+++ b/src/app/pages/veterinarias/veterinarias.page.scss
@@ -5,7 +5,11 @@
     height: auto;
     border: 1px solid #3400c2;    
     margin-bottom: 2%;
+    border-radius: 1.8ch
+    
 }
+
+
 
 .justify{
     text-align: center; 
