--- a/src/app/pages/animales/animales.page.html
+++ b/src/app/pages/animales/animales.page.html
@@ -1,7 +1,6 @@
 <ion-content>
-  <ion-content>
     <div>
-      <h1 class="letra1 centrotxt" > <b>Busca la ficha de tu animal</b> </h1>
+      <h1 class="letra1 centrotxt" > <b>Busca la ficha de tu Pet</b> </h1>
     </div>
   <div class="centrotxt">
     <ion-item class="input" fill="solid">
@@ -21,7 +20,63 @@
                    <h2 class="letras2">Sexo: {{nombre_sexo}}</h2>
                    <h2 class="letras2">Dueño: {{nombre_dueno}}</h2>
                    <h2 class="letras2">Estado: {{nombre_estado}}</h2>
+                   <h2 class="letras2">Nacimiento: {{fecha_nac}}</h2>
         </ion-label>
       </ion-item>
+
+      <div>
+        <h1 class="letra1 centrotxt" > <b>Busca la los procedimientos de tu Pet</b> </h1>
+      </div>
+      <div class="centrotxt">
+          <ion-label position="floating">Segunda clave</ion-label>
+          <!-- <ion-input [(ngModel)]="buscar_input1" ></ion-input> -->
+        <div>
+          <table datatable [dtOptions]="dtoptions"  class="table table-dark" style="width:50%">
+            <thead>
+                <tr>
+                    <th>
+                      Segunda clave
+                    </th>
+                    <th>
+                      Fecha de atención
+                    </th>
+                    <th>
+                      Motivo de la consulta
+                    </th>
+                    <th>
+                      Peso
+                    </th>
+                    <th>
+                      Observacion
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let consuproce of segundalist">
+                    <td>
+                      {{consuproce.consulta_reserva_id_consulta_reserva_id}}
+                    </td>
+                    <td>
+                      {{consuproce.fecha_pro}}
+                    </td>
+                    <td>
+                      {{consuproce.motivo_consulta}}
+                    </td>
+                    <td>
+                      {{consuproce.peso}}
+                    </td>
+                    <td>
+                      {{consuproce.observaciones}}
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        </div>
+        <!-- <ion-button class="botonlistar2" shape="round" (click)="buscarproc()" >Buscar</ion-button> -->
+      </div>
+
+
   </div>
+
+
 </ion-content>
