cambios menores y arreglos

--- a/src/app/pages/animales/animales.page.html
+++ b/src/app/pages/animales/animales.page.html
@@ -25,16 +25,16 @@
       </ion-item>
 
       <div>
-        <h1 class="letra1 centrotxt" > <b>Busca la los procedimientos de tu Pet</b> </h1>
+        <h1 class="letra1 centrotxt2" > <b>Busca la los procedimientos de tu Pet</b> </h1>
       </div>
-      <div class="centrotxt">
+      <div class="centrotxt2">
           <ion-label position="floating">Segunda clave</ion-label>
           <!-- <ion-input [(ngModel)]="buscar_input1" ></ion-input> -->
         <div>
           <table datatable [dtOptions]="dtoptions"  class="table table-dark" style="width:50%">
             <thead>
                 <tr>
-                    <th>
+                    <th>	Calendar
                       Segunda clave
                     </th>
                     <th>
