--- a/src/app/pages/animales/animales.page.scss
+++ b/src/app/pages/animales/animales.page.scss
@@ -20,6 +20,11 @@ border-color: rgb(161, 254, 161);
     color: #7ed957;
 }
 
+.centrotxt2{
+    text-align: center;
+    color: black;
+}
+
 .letras2{
     text-align: center;
     font-size: 100%;
