--- a/src/app/pages/animales/animales.page.scss
+++ b/src/app/pages/animales/animales.page.scss
@@ -62,3 +62,10 @@ border-color: rgb(161, 254, 161);
     min-width: 20%;
     height: auto;
 }
+
+
+table.dataTable td {
+    font-size: 0.8em;
+    width: auto;
+    margin: auto;
+  }
