--- a/src/app/pages/veterinarias/detalle-veterinarias/detalle-veterinarias.page.scss
+++ b/src/app/pages/veterinarias/detalle-veterinarias/detalle-veterinarias.page.scss
@@ -13,3 +13,21 @@ ion-slides{
     color: white;
     border-radius: 30%;
 }
+
+.horas{
+    margin: auto;
+    text-align: center;
+    margin-top: 5%;
+    color: #7ed957;
+    font-weight: bolder;
+    text-transform: lowercase;
+}
+
+.titulos{
+    color: #7ed957;
+    text-align: center;
+}
+
+.letras{
+    color: black;
+}
