--- a/src/app/pages/veterinarias/veterinarias.page.html
+++ b/src/app/pages/veterinarias/veterinarias.page.html
@@ -16,8 +16,8 @@
         >
           <ion-avatar slot="start"> <ion-img src="{{p.img}}"></ion-img> </ion-avatar>
            <h1 class="titulo" > {{p.nombre_vet}} </h1> 
-           <p class="direccion"> {{p.direccion}} </p>   
-           <p class="descripcion"> {{p.descripcion}} </p>
+           <a class="direccion"> {{p.direccion}} </a>   
+           <a class="descripcion"> {{p.descripcion}} </a>
         </ion-item>
       </ion-list>
 </ion-content>
