--- a/src/app/pages/animales/animales.page.scss
+++ b/src/app/pages/animales/animales.page.scss
@@ -55,6 +55,14 @@ border-color: rgb(161, 254, 161);
     text-align: center;
 }
 
+.itemAnimal{
+    margin-top: 2%;
+    border: 4px solid #7ed957; 
+    margin-bottom: 1%;
+    border-radius: 1ch;
+}
+
+
 .imagen{
     margin: 7%;
     display: flex;
@@ -65,7 +73,7 @@ border-color: rgb(161, 254, 161);
 
 
 table.dataTable td {
-    font-size: 0.8em;
-    width: auto;
-    margin: auto;
+    box-shadow: 0 0 0.2em #7ed957;
+    box-sizing: content-box;
+    text-align: center;
   }
