--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -19,7 +19,8 @@
        <br>
        <div>
         <ion-img class="icon" src="assets/Logo_DuocUC.svg.png"></ion-img>
-      <h1 class="footer"> <b> Versión 1.0, Diciembre ,2022</b> </h1>
+      <h1 class="footer"> <b> Versión 1.0, Diciembre ,2022</b>
+    <b>(Actualizada)</b> </h1>
       </div>
     </ion-content>
 </ion-menu>
