se agregan diseños, logos y cambios menores

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,8 +16,9 @@
 
     <ion-button class="letrasHeader" fill="clear" 
     routerLink="/"  
-    routerLinkActive="active-item"
-    [routerLinkActiveOptions]="{exact: true}">
+    >
+    <!-- routerLinkActive="active-item"
+    [routerLinkActiveOptions]="{exact: true}" -->
       Home
     </ion-button>
 
@@ -34,7 +35,7 @@
     </ion-button>
     
     <ion-button fill="clear" class="letrasHeader"
-    href="/veterinarias" 
+    routerLink="/veterinarias" 
     >
       Veterinarias
     </ion-button>
