--- a/src/app/pages/veterinarias/detalle-veterinarias/detalle-veterinarias.page.html
+++ b/src/app/pages/veterinarias/detalle-veterinarias/detalle-veterinarias.page.html
@@ -1,7 +1,7 @@
 <ion-content class="ion-padding">
 
     <ion-buttons>
-        <ion-button href="/veterinarias" >
+        <ion-button routerLink="/veterinarias" >
             <ion-icon class="icon" name="arrow-back-outline" ></ion-icon>
         </ion-button>
     </ion-buttons>
