modificaciones en el diseño, entre otros

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -6,13 +6,13 @@
 
 .bienvenida{
     text-align: center;
-    color: #7ed957;
+    color: #1E72E1;
     font-size: 28px;
 }
 
 .selecciona{
     text-align: center;
-    color: #7ed957;
+    color: #1E72E1;
     font-size: 14px;
     margin-bottom: 0%;
 }
@@ -20,7 +20,7 @@
 .card {
     margin: auto;  
     width: 85%;
-    border: 2px solid #3400c2;    
+    border: 2px solid #1E72E1;    
     margin-bottom: 2%;
 }
 
@@ -38,5 +38,5 @@
     font-size: 135%;
     text-align: center;
     text-justify: distribute;
-
+    color: #1E72E1;
 }
