--- a/src/app/pages/veterinarias/veterinarias.page.scss
+++ b/src/app/pages/veterinarias/veterinarias.page.scss
@@ -13,7 +13,7 @@
 }
 
 .letra1{
-    color: #7ed957;
+    color: #1E72E1;
     text-align: center;
 }
 
@@ -26,19 +26,17 @@
 
 .direccion{
     margin: 5%;
-    color: #3400c2;
+    color: #1E72E1;
     text-align: center;
     text-justify: auto;
     font-size: small;
-;
 };
 
 .descripcion{
+    color: #1E72E1;
     margin: 1%;
     text-align: center;
 }
-
-
 ion-avatar {
     --border-radius: 4px;
   }
