--- a/src/app/pages/animales/animales.page.scss
+++ b/src/app/pages/animales/animales.page.scss
@@ -4,7 +4,7 @@
  
 background-color: #7ed957;
  
-color:#FFF;
+color:#FFFF;
  
 border-color: rgb(161, 254, 161);
 }
@@ -13,21 +13,23 @@ border-color: rgb(161, 254, 161);
     text-align: center;
     font-weight: bolder;
     font-size: 150%;
+    color: #1E72E1;
 }
 
 .centrotxt{
     text-align: center;
-    color: #7ed957;
+    color: #1E72E1;
 }
 
 .centrotxt2{
     text-align: center;
-    color: black;
+    color: #1E72E1;
 }
 
 .letras2{
     text-align: center;
     font-size: 100%;
+    color: #1E72E1;
 }
 
 .botonlistar1{
@@ -35,7 +37,8 @@ border-color: rgb(161, 254, 161);
     margin-left: 30px;
     margin-right: 30px;
     border-style: solid;
-    border-color: #7ed957;
+    border-color: #1E72E1;
+    color: #1E72E1;
 
 }
 
@@ -53,13 +56,16 @@ border-color: rgb(161, 254, 161);
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    color: #1E72E1;
 }
 
 .itemAnimal{
     margin-top: 2%;
-    border: 4px solid #7ed957; 
+    border: 4px solid #1E72E1; 
     margin-bottom: 1%;
     border-radius: 1ch;
+    color: #1E72E1;
+    
 }
 
 
@@ -69,11 +75,12 @@ border-color: rgb(161, 254, 161);
     max-width: 20%;
     min-width: 20%;
     height: auto;
+    
 }
 
 
 table.dataTable td {
-    box-shadow: 0 0 0.2em #7ed957;
+    box-shadow: 0 0 0.2em #1E72E1;
     box-sizing: content-box;
     text-align: center;
   }
